--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-loading-skeleton": "^3.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
