--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-magnify": "^2.7.4",
     "react-lazy-load-image-component": "^1.5.1",
     "react-loading-skeleton": "^3.0.1",
     "react-messenger-customer-chat": "^0.8.0",
