--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "react-windows-ui": "^4.0.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
