Add Effect Accessories Page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-motion": "^0.2.1",
     "react-toastify": "^8.1.0",
     "react-windows-ui": "^4.0.7",
     "web-vitals": "^1.1.2"
